Bug 1116104 - Null-check the do_QueryFrame result before using it.  r=roc